examples/test/testpolicy7730.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7730
  namespace: namespace206
spec:
  podSelector:
    matchLabels:
      key44: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value32
      podSelector:
        matchLabels:
          key11: value1
          key40: value47
          key29: value9
